refined archive. need to fix overlap issue

--- a/mail/mail/static/mail/styles.css
+++ b/mail/mail/static/mail/styles.css
@@ -6,7 +6,7 @@ textarea {
 .row{
     border: 2px solid black;
 }
-
-#archive-button {
-    margin-top: 10px;
-}
+.btn-outline-dark {
+    margin-right: 40px; /* Adjust as necessary */
+    white-space: nowrap; /* Prevents button text from wrapping */
+  }
